fix: Adjust position of fixed element for improved layout on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -507,7 +507,7 @@ body {
             color: white !important;
             position: fixed !important;
             right: 13px !important;
-            top: 13px !important;
+            top: 20px !important;
             transform: none !important;
             font-size: 28px !important;
             font-weight: 700 !important;
